spacing fixes

--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -6,7 +6,7 @@
        background: lightblue;
        color: white;
        
-       h2 {
+       & > h2 {
            text-shadow: 0 0 1px black;
            margin: 0.4em 0.5em;
        }
@@ -26,7 +26,7 @@
         padding: 0 5% 0;
 
 
-        h2 {
+        & > h2 {
             color: white;
             padding-top: 2em;
         }
@@ -42,6 +42,7 @@
             justify-content: center;
             margin: 0 auto 1em;
             flex-wrap: wrap;
+            color: white;
 
             .member {
                 background: darkslateblue;
@@ -50,6 +51,10 @@
 
                 img {
                     width: 100%
+                }
+                
+                h2 {
+                    padding-top: 0.2em;
                 }
             }
         }
